--- a/education.html
+++ b/education.html
@@ -15,9 +15,9 @@
 	<tbody>
 		<tr>
 			<td width="40%" align="center"><p align="right">
-				Prospective PhD Scholar<br>
-				BioTech/Biochem Engg/Food Tech<br>
-				BTech (<a href="https://www.nita.ac.in/">NIT Agartala</a>), MTech (<a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>)<br>
+				Doctoral Student<br>
+				<a href="https://eq.upc.edu/en/Research/others-groups/engmol">Molecular Engineering Research Group (ENGMOL)<br>
+				<a href="https://www.upc.edu/en">Universitat Politècnica de Catalunya (UPC)</a><br>
 				<a href="https://www.linkedin.com/in/jenifardas/">
 					<img class="logo" src="Images/linkedin.svg" title="LinkedIn">
 				</a>
@@ -26,12 +26,12 @@
 				<img class="photo" src="Images/Jenifar-Das.jpg" title="Jenifar Das" width="103" height="103">
 			</td>
 			<td width="40%" align="center"><p align="left">
-				Carrer del Maresme 151<br>
-				Barcelona, Catalunya, Spain - 08019<br>
-				<b>Email:</b> jenifardasbce at gmail.com<br>
-				<a href="mailto:jenifardasbce@gmail.com">
-					<img class="logo" src="Images/mail.svg" title="Send Email"">
-				</a>			
+				G1, ETSEIB, UPC Campus Diagonal Sud<br>
+				Avinguda Diagonal 647, Barcelona, Spain - 08028<br>
+				<b>Email:</b> jenifar.das at upc.edu<br>
+				<a href="https://scholar.google.com/citations?user=d5oNAwgAAAAJ&hl=en">
+					<img class="logo" src="Images/scholar.svg" title="Google Scholar">
+				</a>
 			</td>
 		</tr>
 	</tbody>
@@ -42,7 +42,7 @@
 <center>
 	<nav>
 		<a href="index.html#About">About</a> |
-		<a href="index.html#Research">Research</a> |
+		<a href="index.html#Publication">Publication</a> |
 		<a href="index.html#Experience">Experience</a> |
 		<a href="index.html#Projects">Projects</a> |
 		<a href="#Education">Education</a> |
@@ -56,6 +56,8 @@
 <hr size="2" noshade color="#aaaaaa">
 <h2><a name="Education">Education</a></h2>
 <ul>
+<li><p>2024 - Present : <b>PhD</b> in Polymers and Biopolymers at <a href="https://www.upc.edu/en">UPC BarcelonaTech</a>, Catalunya, Spain</p>
+</li>
 <li><p>2018 - 2020 : <b>MTech</b> in Biochemical Engineering at <a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>, Uttar Pradesh, India</p>
 </li>
 <li><p>2013 - 2017 : <b>BTech</b> in Bio Engineering at <a href="https://www.nita.ac.in/">NIT Agartala</a>, Tripura, India</p>
