--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	<tbody>
 		<tr>
 			<td width="40%" align="center"><p align="right">
-				Prospective PhD Scholar<br>
-				BioTech/Biochem Engg/Food Tech<br>
-				BTech (<a href="https://www.nita.ac.in/">NIT Agartala</a>), MTech (<a href="https://www.iitbhu.ac.in/">IIT Varanasi</a>)<br>
+				Doctoral Student<br>
+				<a href="https://eq.upc.edu/en/Research/others-groups/engmol">Molecular Engineering Research Group (ENGMOL)<br>
+				<a href="https://www.upc.edu/en">Universitat Politècnica de Catalunya (UPC)</a><br>
 				<a href="https://www.linkedin.com/in/jenifardas/">
 					<img class="logo" src="Images/linkedin.svg" title="LinkedIn">
 				</a>
@@ -26,12 +26,12 @@
 				<img class="photo" src="Images/Jenifar-Das.jpg" title="Jenifar Das" width="103" height="103">
 			</td>
 			<td width="40%" align="center"><p align="left">
-				Carrer del Maresme 151<br>
-				Barcelona, Catalunya, Spain - 08019<br>
-				<b>Email:</b> jenifardasbce at gmail.com<br>
-				<a href="mailto:jenifardasbce@gmail.com">
-					<img class="logo" src="Images/mail.svg" title="Send Email"">
-				</a>			
+				G1, ETSEIB, UPC Campus Diagonal Sud<br>
+				Avinguda Diagonal 647, Barcelona, Spain - 08028<br>
+				<b>Email:</b> jenifar.das at upc.edu<br>
+				<a href="https://scholar.google.com/citations?user=d5oNAwgAAAAJ&hl=en">
+					<img class="logo" src="Images/scholar.svg" title="Google Scholar">
+				</a>
 			</td>
 		</tr>
 	</tbody>
@@ -42,7 +42,7 @@
 <center>
 	<nav>
 		<a href="#About">About</a> |
-		<a href="#Research">Research</a> |
+		<a href="#Publication">Publication</a> |
 		<a href="#Experience">Experience</a> |
 		<a href="#Projects">Projects</a> |
 		<a href="education.html#Education">Education</a> |
@@ -54,17 +54,25 @@
 </center>
 </b>
 <hr size="2" noshade color="#aaaaaa">
-
-<p align="justify"><img class="image" width="50" height="50" src="Images/mike.png"><font color="red">I am actively looking for open PhD positions. Please reach out if you are hiring and you feel that I might be a good fit for your research group.</font></p>
 <h2><a name="About">About</a></h2>
-<p>I am currently looking for open PhD positions in one of the broad areas of Bio Technology, Biochemical Engineering, and Food Technology. Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of biosimilar monoclonal antibody (mAb), with the surface protein of <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). Apart from that, I have explored Biomedical Engineering through an internship at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a <a href="#CMC">prototype</a> to detect minimal temperature fluctuations during the wound healing process. I have also explored Ichthyology/Fishery and Plant Tissue Culture through a couple of other internships.</p>
+<p>I am a Doctoral Student in the <a href="https://eq.upc.edu/en">Department of Chemical Engineering</a> at <a href="https://www.upc.edu/en">Universitat Politècnica de Catalunya (UPC)</a>, Spain. I work in the <a href="https://eq.upc.edu/en/Research/others-groups/engmol">Molecular Engineering Research Group (ENGMOL)</a>, advised by <a href="https://scholar.google.com/citations?user=aajhzaQAAAAJ&amp;hl=en">Prof. Juan Jesus Perez</a>. My broad area of research is Molecular Engineering and I am currently working on the computational discovery of
+Allosteric Modulators for G-Protein Coupled Receptors (GPCRs).</p>
+<p>Previously, I was a Research Associate at the <a href="https://www.enzene.com/cdmo/biology/cell-line-engineering/">Cell Line Engineering (CLE)</a> department of <a href="https://www.enzene.com/">Enzene Biosciences Limited</a>, where I worked on the production of Biosimilar monoclonal Antibody (mAb), with the surface protein of <i>SARS-CoV-2</i> virus, etc. Prior to that, I was a Medical Coder for the <a href="https://www.cdc.gov/nchs/icd/icd-10-cm.htm">ICD-10-CM</a> at Intelenet Global Services (now <a href="https://www.teleperformance.com/">Teleperformance</a>). Apart from that, I have explored Biomedical Engineering through an internship at <a href="https://www.cmch-vellore.edu/">Christian Medical College (CMC)</a>, where I designed and developed a <a href="#CMC">prototype</a> to detect minimal temperature fluctuations during the wound healing process. I have also explored Ichthyology (Fishery) and Plant Tissue Culture through a couple of other internships.</p>
 <h2><a name="Research">Research Interests</a></h2>
 <ul>
-<li><p>Bio Technology : Molecular Biology, Microbiology, Cell Biology, Genetics.</p>
+<li><p>Structural and molecular biology</p>
 </li>
-<li><p>Biochemical Engineering : Reactor Design, Upstream Process Technology, Fermentation Technology.</p>
+<li><p>Computer-aided molecular design, and</p>
 </li>
-<li><p>Food Technology : Biochemistry of Processing and Preservation, Food Microbiology, Food Fermentation Technology.</p>
+<li><p>Molecular modeling</p>
+</li>
+</ul>
+<h2><a name="Publication">Publication</a></h2>
+<ul>
+<li><p>[bioRxiv 2024 | <a href="Papers/BIORXIV-24.pdf">PDF</a> | <a href="https://www.biorxiv.org/content/10.1101/2024.02.13.579883v1.full">DOI</a> ] <img class="image" src="Images/new.gif"> <br />
+<i>The Northern Colours: Isolation and Characterisation of 4 Pigment-Producing Bacteria from the Arctic</i> <br />
+<a href="">Jenifar Das</a> and Ashish Kumar Singh <br />
+The Preprint Server for Biology, February 2024</p>
 </li>
 </ul>
 <h2><a name="Experience">Research Experience</a></h2>
@@ -75,7 +83,7 @@
 </li>
 <li><p>Plasmid extraction by ELISA technique</p>
 </li>
-<li><p>Transfection for production of monoclonal antibody (mAb)</p>
+<li><p>Transfection for production of monoclonal Antibody (mAb)</p>
 </li>
 <li><p>Protein purification using chromatographic techniques</p>
 </li>
